Doing it with a standard class